# viber-transfer-to-iphone

./: LICENSE  README.md  pyproject.toml  requirements.txt
tests/: __init__.py  test_android_parser.py  test_ios_backup_reader.py  test_manifest_builder.py  test_models.py  test_schema_converter.py  test_utils.py
viber_transfer/: __init__.py  adb_extractor.py  android_parser.py  cli.py  ios_backup_injector.py  ios_backup_reader.py  manifest_builder.py  models.py  schema_converter.py  utils.py
