[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viber-transfer"
version = "0.1.0"
description = "Migrate Viber chats from Android to iPhone by converting Android databases into iOS backup-compatible format."
authors = [{ name = "Meriton Morina" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["viber", "android", "iphone", "ios", "backup", "migration", "chat"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
viber-transfer = "viber_transfer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["viber_transfer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["viber_transfer"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
